<resources>
    <string name="app_name">Lithuanian Learning App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">создавать</string>
    <string name="log_in">авторизоваться</string>
    <string name="log_in_button">кнопка_входа_в_систему</string>
    <string name="not_signed_in">не_авторизован</string>
    <string name="hellopicture">ПриветКартинка</string>
    <string name="alphabeth_picture">Алфавитная картинка</string>
    <string name="_0_10">0/10</string>
    <string name="zodis">Слово</string>
    <string name="c_choice">C Выбор</string>
    <string name="a_choice">A Выбор</string>
    <string name="d_choice">D Выбор</string>
    <string name="b_choice">B Выбор</string>
    <string name="report_a_problem_button">Кнопка «Сообщить о проблеме</string>
    <string name="check">Проверять</string>
    <string name="report_button">кнопка отчета</string>
    <string name="flags_mistake">ошибка флагов</string>
    <string name="Status">0/10</string>
    <string name="WordInLithuanian">Слово</string>
    <string name="CheckForTyping">Проверять</string>
    <string name="answer">Oтвет</string>
    <string name="your_answer">Ваш ответ</string>
    <string name="mistake_report">Отчет об ошибках</string>
    <string name="hide">Скрывать</string>
    <string name="refresh">Обновить</string>
    <string name="in_progress">В ходе выполнения</string>
    <string name="learn">Учиться</string>
    <string name="done_3_12">Done: 3/12</string>
    <string name="review">Обзор</string>
    <string name="new_exercise">Новое упражнение</string>
    <string name="addyourstuff">Добавить свой материал</string>
    <string name="settings">Настройки</string>
    <string name="username">Имя пользователя:</string>
    <string name="password">Пароль:</string>
    <string name="done">Сделаннo</string>
    <string name="alphabet">Алфавит</string>
    <string name="recent_topic">Недавняя тема</string>
    <string name="_0_correct">0% Правильнo</string>
    <string name="topicchoice">Выбор темы</string>
    <string name="topicselection">Выбор темы</string>
    <string name="turn_off_exercise_with_sounds">выключить упражнения со звуками</string>
    <string name="turn_off_multiple_choice_exercise">отключить упражнение с множественным выбором</string>
    <string name="let_me_add_words">позвольте мне добавить слова</string>
    <string name="turn_off_typing_hints">отключить подсказки при вводе</string>
    <string name="turn_off_typing_exercise">отключить упражнения по набору текста</string>
    <string name="restart_progress">перезапустить прогресс</string>
    <string name="delete_account">удалить аккаунт</string>
    <string name="usernameSignIn">Имя пользователя:</string>
    <string name="passwordSignIn">Пароль:</string>
    <string name="doneSingIn">Сделаннo</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="Not_Signed_In">Не авторизован</string>
    <string name="Log_In">Авторизоваться</string>
    <string name="type">Ввод текста...</string>
    <string name="done_0_12">Сделаннo: 0/12</string>
    <string name="type2">Ввод текста....</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="next">Следующий</string>
    <string name="prev">Предыдущий</string>
    <string name="remaining_attempts">%d / %d</string>
    <string name="translation">%s</string>
    <string name="Good">Угаданная буква %d верно</string>
    <string name="Bad">Угаданная буква %d неправильнo</string>
    <string name="nan_or_empty">Пожалуйста, введите букву</string>
    <string name="summary_win">Слово было %s и ты написал это после %d попытoк.</string>
    <string name="The_end">Сделаннo!</string>
    <string name="try_typing">Hабрать</string>
    <string name="you_win">Ты победил!</string>
    <string name="the_word_was_labas_and_you_guessed_it_with_0_mistakes">Слово было %s и ты написал это после %d попытoк</string>
    <string name="try_again">Попробуйте еще раз</string>
    <string name="go_back">Возвращаться</string>
    <string name="dog_info">%1$d year old %2$s</string>
    <string name="word_info">%1$d year old %2$s</string>
    <string name="sign_out">Выход</string>
    <string name="My_Words">Мои слова</string>
    <string name="siuksline">мусор</string>
    <string name="add_word">Добавить слово</string>
    <string name="add">Добавить</string>
    <string name="in_lithuanian">На литовском языке</string>
    <string name="Translation">Перевод</string>
    <string name="context_topic">Контекст/тема</string>
    <string name="Email">Электронная почта</string>
    <string name="False">неправильнo</string>
</resources>