<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="edu.ktu.lithuanianlearningapp.viewmodels.SignInViewModel2" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/UsertextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsertextField"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:hint="@string/type"
            app:authEmailError="@{viewModel.signInError}"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsertextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="#000000"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/PasswordtextField2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsertextField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordtextField2"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            app:authPasswordError="@{viewModel.signInError}"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordtextInputEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/type2"
                android:inputType="textPassword"
                android:selectAllOnFocus="false"
                android:singleLine="false"
                android:textColor="#000000"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#806846"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordtextField2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:backgroundTint="#806846"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordtextField2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>